add nuspec file

--- a/Renci.SshNet.Async/Renci.SshNet.Async.csproj
+++ b/Renci.SshNet.Async/Renci.SshNet.Async.csproj
@@ -30,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Renci.SshNet.Async.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Renci.SshNet, Version=2013.4.7.0, Culture=neutral, processorArchitecture=MSIL">
