--- a/Renci.SshNet.Async/Renci.SshNet.Async.nuspec
+++ b/Renci.SshNet.Async/Renci.SshNet.Async.nuspec
@@ -12,5 +12,8 @@
     <description>$description$</description>
     <copyright>Copyright 2016</copyright>
     <tags>SSHNET async sftp TAP</tags>
+    <dependencies>
+      <dependency id="SSH.NET" version="2016.0.0" />
+    </dependencies>
   </metadata>
 </package>
