--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,8 @@
-version: 1.3.{build}
+version: 1.4.{build}
 
 image: Visual Studio 2017
+
+configuration: Release
 
 before_build:
 - cmd: nuget restore Renci.SshNet.Async.sln
